# Hyper-LITE

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  WORKSPACE  build.sh  debug_hypervisor.sh  format_all.sh  linker.ld  run_hypervisor.sh  run_tests.sh  toolchain_config.bzl
bazel/custom_rules/: newlib.bzl
cmake/: aarch64-linux-gnu-gcc.cmake
cpu/: BUILD
src/: BUILD  main.c  start.s
src/arch/arm64/: BUILD
src/arch/arm64/inc/: emulation.h  exception.h  syscalls.h  sysregs.h
src/arch/arm64/src/: exception.c  syscalls.c
src/drivers/uart/: BUILD
src/drivers/uart/inc/: uart.h
src/drivers/uart/src/: uart.c
src/lib/libc/inc/: libc.h
src/lib/libc/src/: memcmp.c  memcpy.c  memset.c  printf.c  strlen.c  vsnprintf.c
src/lib/logging/: BUILD
src/lib/logging/inc/: logging.h
src/lib/logging/src/: logging.c
src/lib/math/inc/: math.h
src/lib/math/src/: pow.c
src/mmu/: BUILD
src/mmu/inc/: mmu.h
src/mmu/src/: mmu.c
test/: test_main.c
toolchain/: BUILD  cc_toolchain_config.bzl
